[gd_scene load_steps=16 format=2]

[ext_resource path="res://asset/icons/arrow_cross.png" type="Texture" id=1]
[ext_resource path="res://src/Operator.gd" type="Script" id=2]
[ext_resource path="res://src/CardOrganizer.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://asset/card_glow.png" type="Texture" id=5]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

void fragment(){
	COLOR = vec4(0.0,0.0,0.0,1.0);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

uniform sampler2D n;
uniform float intensity = 0.0f;
uniform float speed = 1.0f;

void fragment(){
	vec4 tx = texture(TEXTURE, UV);
	vec4 noise = texture(n, UV - TIME / (1.0 + speed));
	COLOR.a = clamp(tx.r * noise.r * intensity, 0.0, 1.0);
	COLOR.a = pow(COLOR.a, 2);
}"

[sub_resource type="OpenSimplexNoise" id=8]

[sub_resource type="NoiseTexture" id=9]
width = 64
height = 64
seamless = true
noise = SubResource( 8 )

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/intensity = 3.0
shader_param/speed = 5.0
shader_param/n = SubResource( 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 400, 24 )

[sub_resource type="VisualShaderNodeColorUniform" id=3]
uniform_name = "ColorUniform"

[sub_resource type="VisualShader" id=11]
code = "shader_type canvas_item;
uniform vec4 ColorUniform : hint_color;



void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:2
	vec3 n_out2p0 = ColorUniform.rgb;
	float n_out2p1 = ColorUniform.a;

// Output:0
	COLOR.rgb = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -152.055, 103.738 )
mode = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 3 )
nodes/fragment/2/position = Vector2( 20, 180 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 11 )
shader_param/ColorUniform = Color( 1, 1, 1, 1 )

[node name="OperatorContainer" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="BackGround" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.458824 )
material = SubResource( 7 )
position = Vector2( 406, 0 )
scale = Vector2( 13.8, 1.56 )
texture = ExtResource( 4 )

[node name="Glow" type="Sprite" parent="BackGround"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1.16667, 1.4, 1.4, 1 )
show_behind_parent = true
material = SubResource( 13 )
scale = Vector2( 0.507246, 0.358974 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 450, 0 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
material = SubResource( 5 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Sprite2"]
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 1 )

[node name="CardOrganizer" parent="." instance=ExtResource( 3 )]
